# pyhtppchat

./: README.md  pyhttpchat.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: 404.css  clients.css  clients.html  donation.css  index.html  package.json  server.html
docs/components/: feature-card1.html  question.html
docs/server/: docs.html
src/: __init__.py  authhandler.py  encryptor.py  jsonhandler.py  pyhttpchat.py
submodules/: authhandler.py
website/: 404.html  donation.html  index.css  server.css
website/components/: feature-card.html  gallery-card1.html
website/server/: docs.css
