[build-system]
requires = ["setuptools>=42", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.setuptools.build-system]
requires = ["setuptools>=42", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhttpchat-server"
version = "0.0.0"
description = "EXPERIMENTAL!!"
authors = ["EnvIr0n"]
dynamic = ['python-gnupg==0.5.2', 'gnupg==2.3.1', 'setuptools_scm', 'wheel']

[tool.setuptools]
# Add any additional setuptools configuration here, if needed
